// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas de GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="naruto"
      key="naruto"
    />
  </ul>
</Fragment>
`;

exports[`pruebas de GifExpertApp mostrar el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;
